tests/ui/impl-trait/in-trait/async-and-ret-ref.stderr
error[E0310]: the associated type `impl T` may not live long enough
  --> $DIR/async-and-ret-ref.rs:7:5
   |
LL |     async fn foo() -> &'static impl T;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     the associated type `impl T` must be valid for the static lifetime...
   |     ...so that the reference type `&'static impl T` does not outlive the data it points at

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0310`.
